Fix layout issues on Firefox
Relies on hiding overflow, which is suboptimal.

--- a/coming-soon-page/style.css
+++ b/coming-soon-page/style.css
@@ -29,6 +29,10 @@
     text-align: center;
 }
 
+body {
+    overflow: hidden;
+}
+
 body > .container {
     filter: drop-shadow(20px 20px 4px #0000005e);
 }
